# TD6_INF1015_H25

./: CMakeLists.txt  board.cpp  board.h  echequierwindow.cpp  echequierwindow.hpp  echequierwindow.ui  king.cpp  king.h  knight.cpp  knight.h  main.cpp  model.h  piece.cpp  piece.h  rook.cpp  rook.h  tile.cpp  tile.h
